--- a/nginx.conf
+++ b/nginx.conf
@@ -6,17 +6,17 @@ upstream to_backend {
 }
 
 
-# server {
-#     listen 80;
-#     server_name localhost;
+server {
+    listen 80;
+    server_name localhost;
 
 
-#     location / {
-#         root /dist;
-#         try_files $uri /index.html;
-#     }
+    location / {
+        root /dist;
+        try_files $uri /index.html;
+    }
 
-# }
+}
 server {
     listen 8000;
     server_name localhost;
