--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,9 +39,8 @@ services:
   nginx:
     image: nginx:alpine
     container_name: mug_nginx
-    ports:
-      - 80:80
-      - 8000:8000
+    expose:
+      - 80
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
       - mug_frontend_static:/frontend/dist
