--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ upstream to_backend {
 
 server {
     listen 80;
-    server_name localhost;
+    server_name mug.micheleawada.com;
 
 
     root /dist;
@@ -18,8 +18,8 @@ server {
 
 }
 server {
-    listen 8000;
-    server_name localhost;
+    listen 80;
+    server_name backend.mug.micheleawada.com;
 
     location / {
         proxy_pass http://to_backend;
