--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     volumes:
-      - mug_frontend_static:/frontend/dist
+      - mug_frontend_static:/app/dist
   backend:
     container_name: mug_backend
     build:
@@ -44,14 +44,19 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
       - mug_frontend_static:/frontend/dist
-      - mug_static:/static
-      - mug_media:/media
+      - mug_static:/backend/static
+      - mug_media:/backend/media
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.mug.rule=(Host(`mug.micheleawada.com`) || Host(`backend.mug.micheleawada.com`))"
-      - "traefik.http.routers.mug.entrypoints=websecure"
-      - "traefik.http.routers.mug.tls=true"
-      - "traefik.http.routers.mug.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.mug.middlewares=no-www-http@file,to-https@file"
+      - "traefik.http.routers.mug.rule=Host(`mug.micheleawada.com`) || Host(`www.mug.micheleawada.com`) || Host(`backend.mug.micheleawada.com`)"
+      - "traefik.http.routers.mug.entrypoints=web"
+      - "traefik.http.routers.mug-secure.rule=Host(`mug.micheleawada.com`) || Host(`www.mug.micheleawada.com`) || Host(`backend.mug.micheleawada.com`)"
+      - "traefik.http.routers.mug-secure.middlewares=no-www@file"
+      - "traefik.http.routers.mug-secure.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.mug-secure.tls=true"
+      - "traefik.http.routers.mug-secure.entrypoints=web-secure"
+
     networks:
       - internal
       - traefikproxy
