--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ server {
     server_name mug.micheleawada.com;
 
 
-    root /dist;
+    root /frontend/dist;
     location / {
         try_files $uri /index.html;
     }
@@ -27,10 +27,10 @@ server {
     }
 
     location /static/ {
-        alias /static/;
+        alias /backend/static/;
     }
     location /media/ {
-        alias /media/;
+        alias /backend/media/;
     }
 
 }
