--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     volumes:
-      - mug_frontend_static:/app/dist
+      - mug_frontend_static:/frontend/dist
   backend:
     container_name: mug_backend
     build:
@@ -43,9 +43,9 @@ services:
       - 80
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-      - mug_frontend_static:/frontend/dist
-      - mug_static:/backend/static
-      - mug_media:/backend/media
+      - mug_frontend_static:/dist
+      - mug_static:/static
+      - mug_media:/media
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.mug.middlewares=no-www-http@file,to-https@file"
