--- a/nginx.conf
+++ b/nginx.conf
@@ -7,8 +7,8 @@ upstream to_backend {
 
 
 server {
-    listen 80;
-    server_name mug.micheleawada.com;
+    listen 8000;
+    ;server_name mug.micheleawada.com;
 
 
     root /dist;
@@ -19,7 +19,7 @@ server {
 }
 server {
     listen 80;
-    server_name backend.mug.micheleawada.com;
+    ;server_name backend.mug.micheleawada.com;
 
     location / {
         proxy_pass http://to_backend;
