--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,5 @@
 version: "3.4"
 services:
-  frontend_static:
-    container_name: mug_frontend_static
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    volumes:
-      - mug_frontend_static:/frontend/dist
   backend:
     container_name: mug_backend
     build:
@@ -40,7 +33,7 @@ services:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-      - mug_frontend_static:/dist
+      - ./frontend/dist:/dist
       - mug_static:/static
       - mug_media:/media
 #    labels:
