temp changes for development

--- a/nginx.conf
+++ b/nginx.conf
@@ -6,17 +6,17 @@ upstream to_backend {
 }
 
 
-server {
-    listen 8000;
-    ;server_name mug.micheleawada.com;
+# server {
+#     listen 8000;
+#     ;server_name mug.micheleawada.com;
 
 
-    root /dist;
-    location / {
-        try_files $uri /index.html;
-    }
+#     root /dist;
+#     location / {
+#         try_files $uri /index.html;
+#     }
 
-}
+# }
 server {
     listen 80;
     ;server_name backend.mug.micheleawada.com;
