--- a/nginx.conf
+++ b/nginx.conf
@@ -18,8 +18,8 @@ upstream to_backend {
 
 # }
 server {
-    listen 80;
-    ;server_name backend.mug.micheleawada.com;
+    listen 8000;
+    # ;server_name backend.mug.micheleawada.com;
 
     location / {
         proxy_pass http://to_backend;
