--- a/nginx.conf
+++ b/nginx.conf
@@ -6,20 +6,20 @@ upstream to_backend {
 }
 
 
-# server {
-#     listen 8000;
-#     ;server_name mug.micheleawada.com;
-
-
-#     root /dist;
-#     location / {
-#         try_files $uri /index.html;
-#     }
-
-# }
 server {
-    listen 8000;
-    # ;server_name backend.mug.micheleawada.com;
+    listen 80;
+    server_name mug.micheleawada.com;
+
+
+    root /dist;
+    location / {
+        try_files $uri /index.html;
+    }
+
+}
+server {
+    listen 80;
+    server_name backend.mug.micheleawada.com;
 
     location / {
         proxy_pass http://to_backend;
