--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: Dockerfile
     env_file:
       - ./backend/mug/.env
+      - ./backend/mug/db.env
     expose:
       - 8080
     command: gunicorn mug.wsgi:application --bind 0.0.0.0:8080 --log-level debug
