--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,13 @@
 version: "3.4"
 services:
+  frontend:
+    container_name: frontend
+    restart: always
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    volumes:
+      - frontend_dist:/frontend/dist/
   backend:
     container_name: mug_backend
     restart: always
@@ -37,7 +45,7 @@ services:
       - 82
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./frontend/dist:/dist
+      - frontend_dist:/dist
       - mug_static:/static
       - mug_media:/media
     labels:
@@ -58,7 +66,7 @@ volumes:
   mug_postgres_data:
   mug_media:
   mug_static:
-  mug_frontend_static:
+  frontend_dist:
 
 networks:
   internal:
