--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,6 @@
 version: "3.4"
 services:
-  frontend:
-    container_name: frontend
-    restart: always
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    volumes:
-      - frontend_dist:/frontend/dist/
   backend:
-    container_name: mug_backend
     restart: always
     build:
       context: ./backend
@@ -29,7 +20,6 @@ services:
       - internal
   postgres:
     image: postgres:alpine
-    container_name: mug_postgres
     restart: always
     volumes:
       - mug_postgres_data:/var/lib/postgresql/data
@@ -39,13 +29,12 @@ services:
       - internal
   nginx:
     image: nginx:alpine
-    container_name: mug_nginx
     restart: always
     expose:
       - 82
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-      - frontend_dist:/dist
+      - ./frontend/dist:/dist
       - mug_static:/static
       - mug_media:/media
     labels:
@@ -66,7 +55,6 @@ volumes:
   mug_postgres_data:
   mug_media:
   mug_static:
-  frontend_dist:
 
 networks:
   internal:
